--- a/references.bib
+++ b/references.bib
@@ -3124,3 +3124,36 @@
 	note = {[Online; accessed 9. Dec. 2024]},
 	url = {https://hacks.mozilla.org/2017/02/a-crash-course-in-just-in-time-jit-compilers}
 }
+
+@article{dang2010,
+  title={Stacking graphic elements to avoid over-plotting},
+  author={Dang, Tuan Nhon and Wilkinson, Leland and Anand, Anushka},
+  journal={IEEE Transactions on Visualization and Computer Graphics},
+  volume={16},
+  number={6},
+  pages={1044--1052},
+  year={2010},
+  publisher={IEEE}
+}
+
+@inproceedings{hauser2002,
+  title={Angular brushing of extended parallel coordinates},
+  author={Hauser, Helwig and Ledermann, Florian and Doleisch, Helmut},
+  booktitle={IEEE Symposium on Information Visualization, 2002. INFOVIS 2002.},
+  pages={127--130},
+  year={2002},
+  organization={IEEE}
+}
+
+@article{splechtna2018,
+  title={Cross-table linking and brushing: Interactive visual analysis of multiple tabular data sets},
+  author={Splechtna, Rainer and Beham, Michael and Gra{\v{c}}anin, Denis and Ganuza, Mar{\'\i}a Luj{\'a}n and B{\"u}hler, Katja and Pand{\v{z}}i{\'c}, Igor Sunday and Matkovi{\'c}, Kre{\v{s}}imir},
+  journal={The Visual Computer},
+  volume={34},
+  number={6},
+  pages={1087--1098},
+  year={2018},
+  publisher={Springer}
+}
+
+
