--- a/references.bib
+++ b/references.bib
@@ -56,6 +56,17 @@
   url		= {https://www.youtube.com/watch?v=rX0ItVEVjHc}
 }
 
+@article{bracsoveanu2017,
+  title={Visualizing statistical linked knowledge for decision support},
+  author={Bra{\c{s}}oveanu, Adrian MP and Sabou, Marta and Scharl, Arno and Hubmann-Haidvogel, Alexander and Fischl, Daniel},
+  journal={Semantic Web},
+  volume={8},
+  number={1},
+  pages={113--137},
+  year={2017},
+  publisher={IOS Press}
+}
+
 @Article{	  acton2019,
   title		= {Building a data-oriented future},
   author	= {Acton, Mike},
@@ -1616,6 +1627,15 @@
   url		= {https://plotly.com/python/webgl-vs-svg}
 }
 
+@misc{plotly2024c,
+	title = {Scatter Plots in JavaScript},
+	 author	= {{Plotly Inc.}},
+	year = {2024},
+	month = dec,
+	note = {[Online; accessed 15. Dec. 2024]},
+	url = {https://plotly.com/javascript/line-and-scatter}
+}
+
 @Misc{		  polars2024,
   author	= {Polars Core Team},
   title		= {Index - Polars user guide},
@@ -3096,6 +3116,15 @@
 	month = mar,
 	note = {[Online; accessed 6. Dec. 2024]},
 	url = {https://r-graph-gallery.com/81-barplot-with-variable-width.html}
+}
+
+@misc{holtz2022b,
+	author = {Holtz, Yan},
+	title = {Basic scatterplot in d3.js},
+	year = {2022},
+	month = mar,
+	note = {[Online; accessed 15. Dec. 2024]},
+	url = {https://d3-graph-gallery.com/graph/scatter_basic.html}
 }
 
 @misc{mathematicalmathematics2024,
